...

    <!--Main Menu-->
    <string name="get_help">Get Help now</string>
    <string name="circle">Circle of Trust</string>
    <string name="helping_others">Helping Others</string>

    <!--Reporting Process-->
    <string name="contact_pcsaves">PC SAVES Anonymous Helpline</string>
    <string name="contact_ova">Office of Victim Advocacy</string>
    <string name="contact_oig">Office of Inspector General</string>
    <string name="contact_ocrd">Office of Civil Rights and Diversity</string>
...

    <!-- Button texts and other texts for contact staff-->
    <string name="contact_pcmo">Contact PCMO</string>
    <string name="contact_ssm">Contact SSM</string>
    <string name="contact_sarl">Contact SARL</string>
...
    <!--String related to Circle of Trust-->
    <string name="circle_intro_skip">Skip</string>
    <string name="circle_intro_done">Done</string>
    <string name="circle_title">Circle of Trust</string>
    <string name="home_title">A Safety Resource for Peace Corps Volunteers</string>
...
    <string name="need_to_talk_message">I need to talk. Message sent through First Aide\'s Circle of Trust</string>
    <string name="msg_sent">Message sent</string>
    <string name="ok">OK</string>
    <string name="message_failed">Message Sending Failed for contact </string>
    <string name="no_phone_number">No phone number found</string>
...
    <string name="no_comrade_title">No Contacts Registered</string>
    <string name="no_comrade_msg">Failed to send message since no contacts have been registered</string>
    <string name="add_comrades_save">Save</string>
    <string name="message_options">Message Template</string>

...
    <string name="log_title">SMS Log Report</string>
    <string name="receive_log">You\'ll receive the delivery report shortly</string>
    <string name="safety_tools">Safety Tools</string>
    <string name="support_services">Support Services</string>
    <string name="sexual_assault_awareness">Sexual Assault Awareness</string>
    <string name="policies_glossary">Policies and Glossary</string>
    <string name="radar">RADAR</string>
    <string name="unwanted_attention">Dealing with Unwanted Attention</string>
    <string name="unwanted_attention_title">Unwanted Attention</string>
    <string name="commonalities">Commonalities of Sexual Predators</string>
    <string name="bystander_intervention">Bystander Intervention</string>
    <string name="safety_plan_basics">Safety Plan Basics</string>
    <string name="safety_plan_title">Safety Plan</string>
    <string name="benefits">Benefits of Seeking Staff Support</string>
    <string name="available_services">Services after a Sexual Assault</string>
    <string name="commitment">PCs commitment to Sexual Assault</string>
    <string name="after_assault">What to do After an Assault?</string>
    <string name="mythbusters">Peace Corps Mythbusters</string>
    <string name="was_assault">Was it Sexual Assault?</string>
    <string name="common_questions">Sexual Assault Common Questions</string>
    <string name="impact">Impact of Sexual Assault</string>
    <string name="harassment">Sexual Harassment</string>
    <string name="summary_sheet">Peace Corps Policies</string>
    <string name="glossary">Glossary</string>
    <string name="further_resources">Further Resources</string>
    <string name="settings">Settings</string>
    <string name="user_login">User logged in : </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

...
    <string name="community">Community</string>
    <string name="title_activity_safety_plan">SafetyPlanActivity</string>
    <string name="workplace">Workplace</string>
    <string name="safety_plan_subtitle">Safety and Security is always a primary concern for Peace Corps</string>
    <string name="see_action">View Actions</string>
    <string name="see_concerns">View Concerns</string>
    <string name="support_services_subtitle">Supporting PCVs</string>
    <string name="benefits_subtitle">Important reasons for a volunteer to seek out Staff Support</string>
...
    <string name="enter_country">Enter your country</string>
    <string name="enter_name">Enter your name</string>
    <string name="uganda">Uganda</string>
    <string name="title_activity_login">Sign Up</string>
    <string name="login">Login</string>
    <string name="valid_name">Enter a valid name</string>
    <string name="prompt_please_valid">Please enter a valid name</string>
...
