<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_app"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="@dimen/sub_title_font"
            android:textStyle="bold"
            android:text="@string/home_title"
            />

        <Button
            android:id="@+id/getButton"
            style="@style/NavigateButton"
            android:text="@string/get_help"
            android:layout_marginTop="@dimen/fragment_main_marginTop"/>
        <Button
            android:id="@+id/circleButton"
            style="@style/NavigateButton"
            android:text="@string/circle"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/safetyToolsButton"
            style="@style/NavigateButton"
            android:text="@string/safety_tools"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>
        <Button
            android:id="@+id/supportServicesButton"
            style="@style/NavigateButton"
            android:text="@string/support_services"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>

        <Button android:id="@+id/assaultAwarenessButton"
            style="@style/NavigateButton"
            android:text="@string/sexual_assault_awareness"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>

        <Button
            android:id="@+id/policiesButton"
            style="@style/NavigateButton"
            android:text="@string/policies_glossary"
            android:layout_marginTop="@dimen/fragment_main_marginTop_20"/>

    </LinearLayout>

</ScrollView>
