<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/background_app"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignupActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/first"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/title_font"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/padding_10"
        android:text="@string/first_aide"
        />

    <View
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_below="@id/first"
        android:layout_height="@dimen/contacting_post_staff_view_width"
        android:background="@color/photo_border"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/third"
        android:layout_below="@id/second"
        android:textColor="@color/primary_text_default_material_dark"
        android:textSize="@dimen/sub_title_font"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_10"
        android:text="@string/home_title"
        />


    <LinearLayout
        android:layout_marginTop="@dimen/fragment_main_marginTop_35"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/third"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/contacting_post_staff_marginTop_15"
            android:layout_height="40dp"
            android:id="@+id/edit_name"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textCapWords"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/contacting_post_staff_marginTop_15">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country:"
            android:textSize="@dimen/text_normal"/>

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:textSize="@dimen/text_normal"
            android:layout_marginLeft="@dimen/margin_left"/>

        </LinearLayout>
        <Button
            android:id="@+id/loginButton"
            style="@style/NavigateButton"
            android:text="@string/login"
            android:layout_marginTop="@dimen/fragment_main_marginTop_35"/>

    </LinearLayout>



</RelativeLayout>
