...
        android:id="@+id/main_rel"
        android:layout_height="wrap_content">

        <include android:layout_height="wrap_content"
            android:id="@+id/toolbar_trustees"
            android:layout_width="match_parent"
            layout="@layout/toolbar"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_trustees"
...
                android:layout_below="@+id/subtitle_trustees"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="21dp" />

            <EditText
                android:id="@+id/comrade1EditText"
                android:layout_below="@id/comradeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/trustee_margin"
                android:layout_marginLeft="@dimen/trustee_margin"
                android:layout_marginTop="@dimen/trustee_margin"
...
                android:background="@null"
                android:layout_gravity="right"
                android:onClick="addContact"
                android:tag="6"/>

            <Button
                android:id="@+id/okButton"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/trustee_button_height"
                style="@style/NavigateButton"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/add_comrades_save"
...
